Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4179

Cluster does not replicate exclusive status of queues.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.19
    • C++ Clustering
    • None

    Description

      To reproduce run this script:


      QPIDD="qpidd --auth=no -d --cluster-name=foo -p0 --no-data-dir -t --load-module=src/.libs/cluster.so --log-to-file"
      PORTA=$($QPIDD qpiddA.log)
      ./examples/messaging/spout -b user/user@localhost:$PORTA "exclQ.A; {create: sender, delete:receiver, node:{ x-declare:

      { auto-delete: false, exclusive: true }

      } }" "$(date| md5sum)"
      PORTB=$($QPIDD qpiddB.log)
      echo $PORTA $PORTB

      qpid-stat -b localhost:$PORTA -q
      qpid-stat -b localhost:$PORTB -q


      Note the queue is exclusive in the first qpid-stat output and not in the second.

      They should be the same.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: