QPID-4179: Cluster does not replicate exclusive status of queues.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1367776 13f79535-47bb-0310-9956-ffa450edef68